Replace feature SVG and icons with PNG images, apply positioning to home-illustration

--- a/index.html
+++ b/index.html
@@ -122,42 +122,27 @@
       <p>Find your dream place to live in with more than 10k+ properties listed.</p>
       <button class="btn primary">Browse Properties</button>
       <div class="home-illustration">
-        <svg viewBox="0 0 200 180" xmlns="http://www.w3.org/2000/svg">
-          <!-- House body -->
-          <rect x="40" y="70" width="120" height="80" fill="#6c63ff" rx="8"/>
-          <!-- Roof -->
-          <polygon points="40,70 100,20 160,70" fill="#5651cc"/>
-          <!-- Door -->
-          <rect x="85" y="110" width="30" height="40" fill="#ddd5ff" rx="4"/>
-          <!-- Door handle -->
-          <circle cx="110" cy="130" r="2" fill="#6c63ff"/>
-          <!-- Window 1 -->
-          <rect x="55" y="85" width="20" height="20" fill="#ddd5ff" rx="2"/>
-          <!-- Window 2 -->
-          <rect x="125" y="85" width="20" height="20" fill="#ddd5ff" rx="2"/>
-          <!-- Porch -->
-          <rect x="70" y="145" width="60" height="5" fill="#5651cc" rx="2"/>
-        </svg>
+        <img src="images/feature.png" alt="House illustration" />
       </div>
     </div>
     <div class="features-container">
       <div class="feature-item">
-        <div class="feature-icon">✓</div>
+        <div class="feature-icon"><img src="images/Icon(0).png" alt="Property Insurance icon" /></div>
         <h3>Property Insurance</h3>
         <p>We offer our customer property protection of liability coverage and insurance for their better life.</p>
       </div>
       <div class="feature-item">
-        <div class="feature-icon">💰</div>
+        <div class="feature-icon"><img src="images/Icon(1).png" alt="Best Price icon" /></div>
         <h3>Best Price</h3>
         <p>Not sure what you should be charging for your property? No need to worry, let us do the numbers for you.</p>
       </div>
       <div class="feature-item">
-        <div class="feature-icon">%</div>
+        <div class="feature-icon"><img src="images/Icon(2).png" alt="Lowest Commission icon" /></div>
         <h3>Lowest Commission</h3>
         <p>You no longer have to negotiate commissions and haggle with other agents it only cost 2%!</p>
       </div>
       <div class="feature-item">
-        <div class="feature-icon">🔒</div>
+        <div class="feature-icon"><img src="images/Icon(3).png" alt="Overall Control icon" /></div>
         <h3>Overall Control</h3>
         <p>Get a virtual tour, and schedule visits before you rent or buy any properties. You get overall control.</p>
       </div>
