Update UI, floating card fixes, responsive summary

--- a/index.html
+++ b/index.html
@@ -61,12 +61,12 @@
       <!-- STATS -->
       <div class="hero-stats">
         <div class="hero-stat-item">
-          <div class="stat-icon">👥</div>
+          <div class="stat-icon"><img src="images/Icon(4).png" alt="Renters icon" /></div>
           <h4>50k+ renters</h4>
           <p>believe in our service</p>
         </div>
         <div class="hero-stat-item">
-          <div class="stat-icon">📊</div>
+          <div class="stat-icon"><img src="images/Icon(5).png" alt="Properties icon" /></div>
           <h4>10k+ properties</h4>
           <p>and house ready for occupancy</p>
         </div>
@@ -80,15 +80,22 @@
         
         <!-- FLOATING CARD -->
         <div class="testimonial-card">
-          <div class="card-profile">
-            <img src="https://i.pravatar.cc/150?img=12" alt="Manuel Villa" class="profile-pic"/>
-            <div class="profile-info">
-              <p class="profile-name">Manuel Villa</p>
-              <p class="profile-role">Renter</p>
-              <p class="profile-moved">Moved with <span class="logo-small">Estatery</span></p>
+          <div class="card-header">
+            <div class="card-profile">
+              <svg class="profile-pic" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
+                <image href="images/Group 102.png" width="100" height="100" />
+              </svg>
+              <div class="profile-info">
+                <p class="profile-name">Manuel Villa</p>
+                <p class="profile-role">Renter</p>
+                <p class="profile-moved">Moved with <span class="logo-small">Estatery</span></p>
+              </div>
             </div>
           </div>
-          <p class="testimonial-text">"I loved how smooth the move was, and finally got the house we wanted."</p>
+          <div class="testimonial-message">
+            <p class="testimonial-text">"I loved how smooth the move was, and finally got the house we wanted."</p>
+          </div>
+          <div class="testimonial-divider"></div>
           <div class="stats">
             <div class="stat-item">
               <span class="stat-value">$1,500</span>
